# ai-applications

./: ders1.ipynb  ders2.ipynb  ders3.ipynb  ders5.ipynb  ders6.ipynb  ders8.ipynb  hafta1_dataset.csv  pyproject.toml
.ipynb_checkpoints/: ders1-checkpoint.ipynb
