[project]
name = "yapay-zeka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "experta>=1.9.4",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.8",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "scikeras>=0.13.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "simpsom>=2.0.2",
    "tensorflow>=2.20.0",
]
